[FIX] removed need for second argument in button_approve method

--- a/odoo/src/custom-addons/osi-loans/views/create_applicant.xml
+++ b/odoo/src/custom-addons/osi-loans/views/create_applicant.xml
@@ -66,6 +66,7 @@
                             <field name="dob"/>
                             <field name="phone"/>
                             <field name="email"/>
+                            <field name="age"/>
                         </group>
 
                         <group>
