[ADD] added user groups

--- a/odoo/src/custom-addons/osi-loans/views/create_applicant.xml
+++ b/odoo/src/custom-addons/osi-loans/views/create_applicant.xml
@@ -75,6 +75,7 @@
                             <field name="state"/>
                             <field name="city"/>
                             <field name="zip"/>
+                            <field name="country"/>
                         </group>
 
                         <group>
