--- a/odoo/src/custom-addons/osi-loans/views/contact_override.xml
+++ b/odoo/src/custom-addons/osi-loans/views/contact_override.xml
@@ -3,7 +3,7 @@
         <record model="ir.ui.view" id="second_id_for_the_form">
             <field name="name">second_name_for_the_form</field>
             <field name="model">res.partner</field>
-            <field name="inherit_id" ref="res.partner.form"/>
+            <field name="inherit_id" ref="base.view_partner_form"/>
             <field name="arch" type="xml">
 
                 <data>
