--- a/odoo/src/custom-addons/osi-loans/views/contact_override.xml
+++ b/odoo/src/custom-addons/osi-loans/views/contact_override.xml
@@ -8,7 +8,10 @@
 
                 <data>
 <!--                    <xpath expr="//field[@name='email']" position="after">-->
-                        <field name="employment_status" position="after"/>
+                    <field name="email" position="after">
+                        <field name="employment_status"/>
+                    </field>
+
 <!--                    </xpath>-->
 
                     <xpath expr="//field[@name='email']" position="attributes">
