--- a/odoo/src/custom-addons/osi-loans/views/contact_override.xml
+++ b/odoo/src/custom-addons/osi-loans/views/contact_override.xml
@@ -14,7 +14,7 @@
 
                     </xpath>
                     <xpath expr="//field[@name='email']" position="attributes">
-                        <attribute name="attrs">{'invisible': 1}</attribute>
+                        <attribute name="attrs">{'invisible': True}</attribute>
                     </xpath>
                 </data>
             </field>
