--- a/odoo/src/custom-addons/osi-loans/views/contact_override.xml
+++ b/odoo/src/custom-addons/osi-loans/views/contact_override.xml
@@ -14,7 +14,9 @@
 
                     </xpath>
                     <xpath expr="//field[@name='email']" position="attributes">
-                        <attribute name="attrs">{'invisible': True}</attribute>
+                        <group>
+                            <attribute name="attrs">{'invisible': True}</attribute>
+                        </group>
                     </xpath>
                 </data>
             </field>
