--- a/odoo/src/custom-addons/osi-loans/views/contact_override.xml
+++ b/odoo/src/custom-addons/osi-loans/views/contact_override.xml
@@ -7,17 +7,17 @@
             <field name="arch" type="xml">
 
                 <data>
-                    <xpath expr="//field[@name='mobile']" position="after">
+                    <xpath expr="//field[@name='email']" position="replace">
                         <group>
                              <field name="employment_status"/>
                         </group>
 
                     </xpath>
-                    <xpath expr="//field[@name='email']" position="attributes">
-                        <group>
-                            <attribute name="attrs">{'invisible': True}</attribute>
-                        </group>
-                    </xpath>
+<!--                    <xpath expr="//field[@name='email']" position="attributes">-->
+<!--                        <group>-->
+<!--                            <attribute name="attrs">{'invisible': True}</attribute>-->
+<!--                        </group>-->
+<!--                    </xpath>-->
                 </data>
             </field>
         </record>
