--- a/l10n_us_check_printing_micr/report/print_check.xml
+++ b/l10n_us_check_printing_micr/report/print_check.xml
@@ -45,7 +45,7 @@
                 <t t-esc="page['amount'].replace(o.currency_id.symbol, '')" />
 
             </div>
-            <div class="row ckus_payee_addr_top">
+            <div class="row ckus_payee_addr_top" style="margin-top: -50px;">
                 <div
                     class="col-4 text-left"
                     t-esc="o.company_id.partner_id"
@@ -53,7 +53,7 @@
                 />
                 <div class="col-1" />
                 <div class="col-5 text-left">
-                            <t t-esc="o.journal_id.bank_id.name" /><br />
+                            <t t-esc="o.journal_id.bank_id.name" style="font-size: 10px;"/><br />
                             <t t-esc="o.journal_id.bank_id.street" />,
                             <t t-esc="o.journal_id.bank_id.city" /><br />
                             <t t-esc="o.journal_id.bank_id.state.name" />
