--- a/odoo/src/custom-addons/sales_filter/views/add_sales_filter.xml
+++ b/odoo/src/custom-addons/sales_filter/views/add_sales_filter.xml
@@ -12,7 +12,7 @@
 
                 <xpath expr="//field[@name='my_quotation']" position="after">
                         <field string="Today" name="created_today"
-                               domain="[('created_date','=',time.strftime('%Y-%m-%d 23:59:59')),('date','gigit =',time.strftime('%Y-%m-%d 00:00:00')))]"/>
+                               domain="[('created_date','=',time.strftime('%Y-%m-%d 23:59:59'))]"/>
                 </xpath>
             </field>
         </record>
