--- a/odoo/src/custom-addons/sales_filter/views/add_sales_filter.xml
+++ b/odoo/src/custom-addons/sales_filter/views/add_sales_filter.xml
@@ -11,8 +11,11 @@
 <!--                </field>-->
 
                 <xpath expr="//field[@name='my_quotation']" position="after">
-                        <field string="Today" name="created_today"
-                               domain="[('created_date','=',context_today().strftime('%Y-%m-%d'))]"/>
+<!--                        <field string="Today" name="created_today"-->
+<!--                               domain="[('created_date','=',context_today().strftime('%Y-%m-%d'))]"/>-->
+
+                     <field string="Today" name="created_today"
+                               domain="[('created_date','=',today()]"/>
                 </xpath>
             </field>
         </record>
