--- a/odoo/src/custom-addons/sales_filter/views/add_sales_filter.xml
+++ b/odoo/src/custom-addons/sales_filter/views/add_sales_filter.xml
@@ -15,7 +15,7 @@
 <!--                               domain="[('created_date','=',context_today().strftime('%Y-%m-%d'))]"/>-->
 
                      <field string="Today" name="created_today"
-                               domain="[('created_date','=',today()]"/>
+                               domain="[('created_date','=',fields.Date.today()]"/>
                 </xpath>
             </field>
         </record>
