--- a/odoo/src/custom-addons/sales_filter/views/add_sales_filter.xml
+++ b/odoo/src/custom-addons/sales_filter/views/add_sales_filter.xml
@@ -10,7 +10,7 @@
                 <!--                           domain="[('created_date','=',time.strftime('%Y-%m-%d 23:59:59')),('date','gigit =',time.strftime('%Y-%m-%d 00:00:00')))]"/>-->
                 <!--                </field>-->
                 <data>
-                    <xpath expr="//field[@name='my_quotation']" position="after">
+                    <xpath expr="//field[@name='sales']" position="replace">
                         <!--                        <field string="Today" name="created_today"-->
                         <!--                               domain="[('created_date','=',context_today().strftime('%Y-%m-%d'))]"/>-->
 
