--- a/odoo/src/custom-addons/sales_filter/views/add_sales_filter.xml
+++ b/odoo/src/custom-addons/sales_filter/views/add_sales_filter.xml
@@ -15,7 +15,7 @@
 <!--                               domain="[('amount_total','=>','50']"/>-->
 <!--                    </xpath>-->
 
-                    <xpath expr="//filter[@name='my_sale_orders_filter']" position="replace">
+                    <xpath expr="//filter[@name='my_quotation']" position="replace">
 
                     <filter string="Today" name="today_ov" domain="[('created_date','=',context_today().strftime('%Y-%m-%d'))]"/>
 
