--- a/odoo/src/custom-addons/sales_filter/views/add_sales_filter.xml
+++ b/odoo/src/custom-addons/sales_filter/views/add_sales_filter.xml
@@ -5,20 +5,9 @@
             <field name="model">sale.order</field>
             <field name="inherit_id" ref="sale.sale_order_view_search_inherit_quotation"/>
             <field name="arch" type="xml">
-
                 <data>
-<!--                    <xpath expr="//field[@name='sales']" position="replace">-->
-<!--                        &lt;!&ndash;                        <field string="Today" name="created_today"&ndash;&gt;-->
-<!--                        &lt;!&ndash;                               domain="[('created_date','=',context_today().strftime('%Y-%m-%d'))]"/>&ndash;&gt;-->
-
-<!--                        <field string="Today" name="created_today"-->
-<!--                               domain="[('amount_total','=>','50']"/>-->
-<!--                    </xpath>-->
-
                     <xpath expr="//filter[@name='my_quotation']" position="replace">
-
-                    <filter string="Today" name="today_ov" domain="[('create_date','=',context_today().strftime('%Y-%m-%d'))]"/>
-
+                    <filter string="Today" name="today_ov" domain="[('create_date','=',fields.Date.today())]"/>
                 </xpath>
                 </data>
             </field>
