--- a/odoo/src/custom-addons/sales_filter/views/add_sales_filter.xml
+++ b/odoo/src/custom-addons/sales_filter/views/add_sales_filter.xml
@@ -7,7 +7,7 @@
             <field name="arch" type="xml">
                 <data>
                     <xpath expr="//filter[@name='my_quotation']" position="replace">
-                    <filter string="Today" name="today_ov" domain="[('create_date','=',fields.Date.today())]"/>
+                    <filter string="Today" name="today_ov" domain="[('create_date','=',context_today())]"/>
                 </xpath>
                 </data>
             </field>
