group by company

--- a/odoo/src/custom-addons/sales_filter/views/add_sales_filter.xml
+++ b/odoo/src/custom-addons/sales_filter/views/add_sales_filter.xml
@@ -8,7 +8,11 @@
                 <data>
                     <xpath expr="//filter[@name='my_quotation']" position="replace">
                     <filter string="Today" name="today_ov" domain="[('create_date','>=',context_today().strftime('%Y-%m-%d'))]"/>
-                        <filter string="Company" domain="[]" context="{'group_by':'company_id'}"/>
+                        <field string="Company" domain="[]" context="{'group_by':'company_id'}"/>
+                </xpath>
+
+                    <xpath expr="//field @name='customer_id']" position="replace">
+                        <field string="Company" domain="[]" context="{'group_by':'company_id'}"/>
                 </xpath>
                 </data>
             </field>
