--- a/osi_inventory_by_date/wizard/inventory_valuation.xml
+++ b/osi_inventory_by_date/wizard/inventory_valuation.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
         <record id="view_inventory_valuation_ondate_report" model="ir.ui.view">
             <field name="name">inventory.valuation.ondate.report</field>
@@ -7,21 +7,31 @@
                 <form string="Valuation Report">
                     <group>
                         <group string="Company">
-                            <field name="company_id" string="Company"
-                                options="{'no_open': True, 'no_create': True, 'no_create_edit': True}" placeholder="All companies"/>
+                            <field
+                            name="company_id"
+                            string="Company"
+                            options="{'no_open': True, 'no_create': True, 'no_create_edit': True}"
+                            placeholder="All companies"
+                        />
                         </group>
                         <group string="Warehouses">
-                            <field name="warehouse_ids" widget="many2many_tags"
-                                string="Warehouses"
-                                options="{'no_open': True, 'no_create': True, 'no_create_edit': True}"
-                                placeholder="All Warehouses"/>
+                            <field
+                            name="warehouse_ids"
+                            widget="many2many_tags"
+                            string="Warehouses"
+                            options="{'no_open': True, 'no_create': True, 'no_create_edit': True}"
+                            placeholder="All Warehouses"
+                        />
                         </group>
                     </group>
                     <group>
                         <group string="Location">
-                            <field name="location_id" string="Select Location"
-                                options="{'no_open': True, 'no_create': True, 'no_create_edit': True}"
-                                placeholder="All above Warehouses Locations"/>
+                            <field
+                            name="location_id"
+                            string="Select Location"
+                            options="{'no_open': True, 'no_create': True, 'no_create_edit': True}"
+                            placeholder="All above Warehouses Locations"
+                        />
                         </group>
                         <group string="Valuation">
                             <field name="start_date" />
@@ -29,22 +39,32 @@
                         </group>
                     </group>
                     <group string="Select Categories">
-                        <field name="filter_product_categ_ids"
-                            nolabel="1" placeholder="All Categories">
+                        <field
+                        name="filter_product_categ_ids"
+                        nolabel="1"
+                        placeholder="All Categories"
+                    >
                             <tree string="Products">
                                 <field name="name" />
                             </tree>
                         </field>
                     </group>
                     <footer>
-                        <button name="print_report" string="_PDF"
-                            type="object" class="oe_highlight" />
+                        <button
+                        name="print_report"
+                        string="_PDF"
+                        type="object"
+                        class="oe_highlight"
+                    />
                         or
-                        <button name="print_xls_report" string="_XLS"
-                            type="object" class="oe_highlight" />
+                        <button
+                        name="print_xls_report"
+                        string="_XLS"
+                        type="object"
+                        class="oe_highlight"
+                    />
                         or
-                        <button string="Cancel" class="oe_link"
-                            special="cancel" />
+                        <button string="Cancel" class="oe_link" special="cancel" />
                     </footer>
                 </form>
             </field>
@@ -58,9 +78,13 @@
             <field name="target">new</field>
         </record>
 
-        <menuitem action="action_inventory_valuation_report" id="menu_inventory_valuation_report"
-            parent="stock.menu_warehouse_report" sequence="1" groups="osi_inventory_by_date.group_inventory_valuation_features"
-            name="Inventory Valuation Report by Location and Date"
-        />
+        <menuitem
+        action="action_inventory_valuation_report"
+        id="menu_inventory_valuation_report"
+        parent="stock.menu_warehouse_report"
+        sequence="1"
+        groups="osi_inventory_by_date.group_inventory_valuation_features"
+        name="Inventory Valuation Report by Location and Date"
+    />
 
 </odoo>
