temporarily removed move_id xpath to see if there are other errors

--- a/odoo/src/custom-addons/advance_check_void/views/account_payment_view.xml
+++ b/odoo/src/custom-addons/advance_check_void/views/account_payment_view.xml
@@ -78,12 +78,12 @@
 <!--                />-->
 <!--            </field>-->
 
-            <xpath expr="//field[@name='move_id']" position="after">
-                <field
-                    name="void_reason"
-                    attrs="{'invisible': [('payment_state', '!=', 'reversed')]}"
-                />
-            </xpath>
+<!--            <xpath expr="//field[@name='move_id']" position="after">-->
+<!--                <field-->
+<!--                    name="void_reason"-->
+<!--                    attrs="{'invisible': [('payment_state', '!=', 'reversed')]}"-->
+<!--                />-->
+<!--            </xpath>-->
         </field>
     </record>
 
