move_id is now a smart button instead of a field changed field to ref

--- a/odoo/src/custom-addons/advance_check_void/views/account_payment_view.xml
+++ b/odoo/src/custom-addons/advance_check_void/views/account_payment_view.xml
@@ -71,12 +71,12 @@
                     attrs="{'invisible': [('payment_state', '!=', 'reversed')]}"
                 />
             </xpath>
-<!--            <field name="move_id" position="after">-->
-<!--                <field-->
-<!--                    name="void_reason"-->
-<!--                    attrs="{'invisible': [('payment_state', '!=', 'reversed')]}"-->
-<!--                />-->
-<!--            </field>-->
+            <field name="ref" position="after">
+                <field
+                    name="void_reason"
+                    attrs="{'invisible': [('payment_state', '!=', 'reversed')]}"
+                />
+            </field>
 
 <!--            <xpath expr="//field[@name='move_id']" position="after">-->
 <!--                <field-->
