[ADD] Stock Bin Location
[ADD] Stock Bin Location
pre-commit
[IMP] stock_bin_location (Make Readonly, except on DO)
[FIX] bin_location (store=True)
When adding a bin location during receipt, it wasn't saving because the related field wasn't a stored field.
[IMP] stock_bin_location (Improved Code)
pre-commit
[IMP] make readonly for all but outgoing pickings

--- a/stock_bin_location/views/stock_move_line.xml
+++ b/stock_bin_location/views/stock_move_line.xml
@@ -5,7 +5,16 @@
         <field name="inherit_id" ref="stock.view_stock_move_line_operation_tree" />
         <field name="arch" type="xml">
             <field name="lot_id" position="after">
-                <field name="bin_location" />
+                <field
+                    name="bin_location"
+                    attrs="{'readonly':[('picking_code','!=','incoming')]}"
+                    invisible="not context.get('show_lots_m2o')"
+                />
+                <field
+                    name="get_bin_location"
+                    string="Bin Location"
+                    invisible="not context.get('show_lots_text')"
+                />
             </field>
         </field>
     </record>
