--- a/advance_check_void/wizard/account_move_reversal_view.xml
+++ b/advance_check_void/wizard/account_move_reversal_view.xml
@@ -10,7 +10,10 @@
         <field name="view_id" ref="account.view_account_move_reversal" />
         <field name="target">new</field>
     </record>
-    <record id="advanced_check_void_account_move_reversal_form" model="ir.ui.view">
+    <record
+        id="advanced_check_void_account_move_reversal_form"
+        model="ir.ui.view"
+    >
         <field name="name">account.move.reversal.form</field>
         <field name="model">account.move.reversal</field>
         <field name="inherit_id" ref="account.view_account_move_reversal" />
