--- a/advance_check_void/views/payment_check_history_view.xml
+++ b/advance_check_void/views/payment_check_history_view.xml
@@ -4,7 +4,7 @@
         <field name="name">payment.check.details.tree</field>
         <field name="model">payment.check.history</field>
         <field name="arch" type="xml">
-            <tree string="Payment Check History" create="false" delete="false">
+            <tree create="false" delete="false">
                 <field name="name" />
                 <field name="partner_id" />
                 <field name="journal_id" />
