[FIX] Pre-commit errors

--- a/osi_inventory_by_date/wizard/inventory_valuation.xml
+++ b/osi_inventory_by_date/wizard/inventory_valuation.xml
@@ -44,7 +44,7 @@
                         nolabel="1"
                         placeholder="All Categories"
                     >
-                            <tree string="Products">
+                            <tree>
                                 <field name="name" />
                             </tree>
                         </field>
