--- a/agreement_sale_subscription/views/agreement.xml
+++ b/agreement_sale_subscription/views/agreement.xml
@@ -7,10 +7,7 @@
     <record id="agreement_subscription_form_view" model="ir.ui.view">
         <field name="name">agreement.subscription.form.view</field>
         <field name="model">agreement</field>
-        <field
-            name="inherit_id"
-            ref="agreement_legal_sale.agreement_sale_form_view"
-        />
+        <field name="inherit_id" ref="agreement_legal_sale.agreement_sale_form_view" />
         <field name="arch" type="xml">
             <group id="sale_right" position="inside">
                 <field name="subscription_id" readonly="1" />
