[FIX] sale_subscription_brand

--- a/sale_subscription_brand/views/sale_subscription_views.xml
+++ b/sale_subscription_brand/views/sale_subscription_views.xml
@@ -6,10 +6,7 @@
     <record id="sale_subscription_view_form_brand" model="ir.ui.view">
         <field name="name">sale.subscription.form.view.brand</field>
         <field name="model">sale.subscription</field>
-        <field
-            name="inherit_id"
-            ref="sale_subscription.sale_subscription_view_form"
-        />
+        <field name="inherit_id" ref="sale_subscription.sale_subscription_view_form" />
         <field name="arch" type="xml">
             <field name="partner_id" position="after">
                 <field name="brand_id" />
