[IMP] osi_helpdesk_sale (Add confirm to create button)
Users are accidentally clicking the create ticket button so adding the confirm prompt will hopefully reduce accidental creations.

--- a/osi_helpdesk_sale/views/sale_order_view.xml
+++ b/osi_helpdesk_sale/views/sale_order_view.xml
@@ -12,6 +12,7 @@
                     type="object"
                     class="btn btn-primary"
                     groups="helpdesk.group_helpdesk_user"
+                    confirm="Please confirm that you want to create a helpdesk ticket."
                 />
             </button>
             <button name="preview_sale_order" position="before">
